--- a/config-client-dev.yml
+++ b/config-client-dev.yml
@@ -1,6 +1,7 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:1111/eureka/
+server:
+  port: 3333
+spring:
+  application:
+    name: config-client
 hello:
   sssss-dd
